Bug 28226 - [4.2 Regression] posix.cc:222: error: invalid conversion from 'const void*' to 'void*'
Summary: [4.2 Regression] posix.cc:222: error: invalid conversion from 'const void*' t...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: libgcj (show other bugs)
Version: 4.2.0
: P3 normal
Target Milestone: 4.2.0
Assignee: Andreas Tobler
URL:
Keywords: build
Depends on:
Blocks:
 
Reported: 2006-07-03 00:01 UTC by John David Anglin
Modified: 2006-07-08 18:53 UTC (History)
4 users (show)

See Also:
Host: hppa2.0w-hp-hpux11.11
Target: hppa2.0w-hp-hpux11.11
Build: hppa2.0w-hp-hpux11.11
Known to work:
Known to fail:
Last reconfirmed: 2006-07-04 19:52:15


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description John David Anglin 2006-07-03 00:01:17 UTC
/mnt/gnu/gcc/objdir/./gcc/xgcc -shared-libgcc -B/mnt/gnu/gcc/objdir/./gcc -nostd
inc++ -L/mnt/gnu/gcc/objdir/hppa2.0w-hp-hpux11.11/libstdc++-v3/src -L/mnt/gnu/gc
c/objdir/hppa2.0w-hp-hpux11.11/libstdc++-v3/src/.libs -B/opt/gnu/gcc/gcc-4.2.0/h
ppa2.0w-hp-hpux11.11/bin/ -B/opt/gnu/gcc/gcc-4.2.0/hppa2.0w-hp-hpux11.11/lib/ -i
system /opt/gnu/gcc/gcc-4.2.0/hppa2.0w-hp-hpux11.11/include -isystem /opt/gnu/gc
c/gcc-4.2.0/hppa2.0w-hp-hpux11.11/sys-include -DHAVE_CONFIG_H -I. -I../../../gcc
/libjava -I./include -I./gcj -I../../../gcc/libjava -Iinclude -I../../../gcc/lib
java/include -I../../../gcc/libjava/classpath/include -Iclasspath/include -I../.
./../gcc/libjava/classpath/native/fdlibm -I../../../gcc/libjava/../boehm-gc/incl
ude -I../boehm-gc/include -I../../../gcc/libjava/libltdl -I../../../gcc/libjava/
libltdl -I../../../gcc/libjava/.././libjava/../gcc -I../../../gcc/libjava/../zli
b -I../../../gcc/libjava/../libffi/include -I../libffi/include -fno-rtti -fnon-c
all-exceptions -pthread -fdollars-in-identifiers -Wswitch-enum -D_FILE_OFFSET_BI
TS=64 -Wextra -Wall -D_GNU_SOURCE -DPREFIX=\"/opt/gnu/gcc/gcc-4.2.0\" -DLIBDIR=\
"/opt/gnu/gcc/gcc-4.2.0/lib\" -DJAVA_HOME=\"/opt/gnu/gcc/gcc-4.2.0\" "-DBOOT_CLA
SS_PATH=\"/opt/gnu/gcc/gcc-4.2.0/share/java/libgcj-4.2.0.jar libgcj-tools-4.2.0.
jar\"" -DJAVA_EXT_DIRS=\"/opt/gnu/gcc/gcc-4.2.0/share/java/ext\" -DGCJ_ENDORSED_
DIRS=\"/opt/gnu/gcc/gcc-4.2.0/share/java/gcj-endorsed\" -DGCJ_VERSIONED_LIBDIR=\
"/opt/gnu/gcc/gcc-4.2.0/lib/gcj-4.2.0\" -DPATH_SEPARATOR=\":\" -DLIBGCJ_DEFAULT_
DATABASE=\"/opt/gnu/gcc/gcc-4.2.0/lib/gcj-4.2.0/classmap.db\" -DLIBGCJ_DEFAULT_D
ATABASE_PATH_TAIL=\"gcj-4.2.0/classmap.db\" -DTOOLEXECLIBDIR=\"/opt/gnu/gcc/gcc-
4.2.0/lib\" -g -O2 -MT posix.lo -MD -MP -MF .deps/posix.Tpo -c ../../../gcc/libj
ava/posix.cc  -fPIC -DPIC -o .libs/posix.o
../../../gcc/libjava/posix.cc: In function 'int _Jv_platform_dladdr(const void*,
 _Jv_AddrInfo*)':
../../../gcc/libjava/posix.cc:222: error: invalid conversion from 'const void*'
to 'void*'
../../../gcc/libjava/posix.cc:222: error:   initializing argument 1 of 'int dlad
dr(void*, Dl_info*)'
make[3]: *** [posix.lo] Error 1
Comment 2 Andreas Tobler 2006-07-04 20:21:49 UTC
Subject: Bug 28226

Author: andreast
Date: Tue Jul  4 20:21:40 2006
New Revision: 115184

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=115184
Log:
2006-07-04  Andreas Tobler  <a.tobler@schweiz.ch>

	PR libgcj/28226:
	* include/posix.h (_Jv_platform_dladdr): Remove const qualifier.
	* include/win32.h (_Jv_platform_dladdr): Likewise.
	* posix.cc (_Jv_platform_dladdr): Likewise.
	* win32.cc (_Jv_platform_dladdr): Likewise.

Modified:
    trunk/libjava/ChangeLog
    trunk/libjava/include/posix.h
    trunk/libjava/include/win32.h
    trunk/libjava/posix.cc
    trunk/libjava/win32.cc

Comment 3 Andreas Tobler 2006-07-04 20:26:17 UTC
Fixed
Comment 4 dave 2006-07-04 21:35:57 UTC
Subject: Re:  [4.2 Regression] posix.cc:222: error: invalid conversion from 'const void*' to 'void*'

> Fixed

Thanks,
Dave
Comment 5 Kaveh Ghazi 2006-07-08 18:53:01 UTC
FWIW, Solaris 10 had the same problem and cause, and is now also fixed.
Thanks,
--Kaveh