2006-07-04  Andreas Tobler  <a.tobler@schweiz.ch>

PR libgcj/28226:
	* include/posix.h (_Jv_platform_dladdr): Remove const qualifier.
	* include/win32.h (_Jv_platform_dladdr): Likewise.
	* posix.cc (_Jv_platform_dladdr): Likewise.
	* win32.cc (_Jv_platform_dladdr): Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@115184 138bc75d-0d04-0410-961f-82ee72b054a4